still fixing wallpaper height so it can look good on mobile

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,7 +11,7 @@ $color: #F1EFCE;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   overflow: hidden;
 }
